# AUV-CS24B1048

./: README.md
task1_1/: README.md  README.txt
task1_1/devel/: .catkin  .rosinstall  setup.sh
task1_1/devel/include/chat_pkg/: ChatMessage.h
task1_1/devel/lib/chat_pkg/: chat_node.py  talker.py
task1_1/devel/lib/pkgconfig/: chat_pkg.pc
task1_1/src/chat_pkg/: CMakeLists.txt
task1_1/src/chat_pkg/msg/: ChatMessage.msg
task1_2/: README.md
task1_2/devel/: .catkin  .rosinstall  local_setup.sh
task1_2/devel/lib/pkgconfig/: number_processing.pc
task1_2/src/number_processing/: CMakeLists.txt  package.xml
task1_2/src/number_processing/scripts/: final_node.py  number_processor.py  number_publisher.py
task1_3/: README.md
task1_3/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
task1_3/devel/include/bot_simulator/: bot_pose.h
task1_3/devel/lib/pkgconfig/: bot_simulator.pc
task1_3/src/bot_simulator/: CMakeLists.txt  package.xml
task1_3/src/bot_simulator/scripts/: command_publisher.py  pose_subscriber.py
task2_1/: README.md
task2_1/devel/: .catkin
task2_1/devel/lib/pkgconfig/: camera_opencv_demo.pc
task2_1/src/camera_opencv_demo/: CMakeLists.txt  package.xml
task2_1/src/camera_opencv_demo/scripts/: camera_publisher.py  image_viewer.py
task2_2/: README.md
task2_2/devel/: .catkin  .rosinstall  local_setup.sh
task2_2/devel/lib/pkgconfig/: edge_detection.pc
task2_2/src/edge_detection/: CMakeLists.txt
task2_2/src/edge_detection/launch/: edge_detection.launch
task2_2/src/edge_detection/scripts/: edge_detection_publisher.py  (+1 more)
(+25 files in other folders)
